--- a/styles/membres.css
+++ b/styles/membres.css
@@ -2,8 +2,8 @@
     --primaire-color: #B10101;
     --secondaire-color: #181818;
     --tertiaire-color:  #F9F9F9;
+    --quaternaire-color: #EDC73E;
     --font-color: #000;
-    --red-color: #EDC73E;
     --background-color: linear-gradient(to bottom, #181818 0%, #ED2527 50%, #F9F9F9 100%);
 }
 @keyframes spinner {
@@ -46,6 +46,22 @@
     }
     100% {
         height: 670px;
+    }
+}
+@keyframes nav-box {
+    0% {
+        width: auto;
+        height: 0;
+        opacity: 0;
+    }
+    80% {
+        width: auto;
+        height: fit-content;
+        opacity: 0;
+    }
+    100% {
+        height: auto;
+        opacity: 1;
     }
 }
 @font-face {
@@ -107,38 +123,41 @@ nav {
     height: 4vh;
 }
 .naviguation {
-    font-size: 1.3em;
     text-decoration: none;
     color: var(--tertiaire-color);
     font-weight: bold;
     border: 2px solid var(--tertiaire-color);
     border-radius: 20px 0px 20px 0px;
-    margin: auto 0.2vw;
+    margin: auto 0.3vw;
     text-align: center;
     cursor: pointer;
-    padding: 0.5vh 1.3vw;
+    padding: 0.5vh 0;
     z-index: 10;
 
 }
 .naviguation:hover {
     background-color: var(--primaire-color);
-    border: 2px solid var(--red-color);
+    border: 2px solid var(--quaternaire-color);
 }
 .page-active {
     background-color: var(--primaire-color);
-    border: 2px solid var(--red-color);
-    color: var(--red-color);
+    border: 2px solid var(--quaternaire-color);
+    color: var(--quaternaire-color);
 }
 .lien-nav {
     text-decoration: none;
     color: var(--tertiaire-color);
+    padding: 0 0.5vw;
+    font-size: 1.25em;
 }
 .naviguation:hover .lien-nav {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
 }
 .lien-actif {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
     text-decoration: none;
+    padding: 0 0.5vw;
+    font-size: 1.25em;
 }
 .nav-rapide {
     height: 1px;
@@ -151,7 +170,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: loader 300ms ease-in-out;
+    animation: nav-box 400ms linear;
     height: auto;
     width: auto;
     position: initial;
@@ -167,11 +186,13 @@ nav {
     text-decoration: none;
     color: var(--tertiaire-color);
     display: block;
-    padding: 1vh 0;
+    padding: 1vh 0.5vw;
+    font-size: 1.20em;
     max-width: 12vw;
+    word-wrap: break-word;
 }
 .lien-rapide:hover {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
 }
 main {
     background: var(--background-color);
@@ -207,7 +228,7 @@ main {
     margin: 2em 1em;
 }
 .profil-equipe:hover {
-    box-shadow: inset 0em 0em 5em 0em var(--red-color);
+    box-shadow: inset 0em 0em 5em 0em var(--quaternaire-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
 }
@@ -244,14 +265,14 @@ main {
     color: var(--second-color);
 }
 .nom-groupe {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
     font-weight: bold;
 }
 .titre-classe {
     color: var(--second-color);
 }
 .position-classe {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
     font-weight: bold;
 }
 .categorie {
@@ -262,7 +283,7 @@ main {
     color: var(--second-color);
 }
 .position-categorie {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
     font-weight: bold;
 }
 .rang {
@@ -274,7 +295,7 @@ main {
 }
 .position-rang {
     display: flex;
-    color: var(--red-color);
+    color: var(--quaternaire-color);
     font-weight: bold;
 }
 .rang-img {
@@ -289,7 +310,7 @@ main {
     color: var(--second-color);
 }
 .club-fonction {
-    color: var(--red-color);
+    color: var(--quaternaire-color);
     font-weight: bold;
 }
 footer {
@@ -315,7 +336,7 @@ footer {
     background-color: transparent;
 }
 .logo-lien-footer:hover {
-    box-shadow: 3px 3px 5px 3px var(--red-color);
+    box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
 }
 .moselle {
     height: 10vh;
@@ -324,7 +345,7 @@ footer {
     background-color: transparent;
 }
 .moselle:hover {
-    box-shadow: 3px 3px 5px 3px var(--red-color);
+    box-shadow: 3px 3px 5px 3px var(--quaternaire-color);
 }
 .liste-contact {
     color: var(--secondaire-color);
