--- a/styles/grades.css
+++ b/styles/grades.css
@@ -74,6 +74,22 @@
     font-family: 'Rubik', 'sans-serif';
     box-sizing: border-box;
 }
+::-webkit-scrollbar {
+    width: 13px;
+    height: 13px;
+}
+::-webkit-scrollbar-thumb {
+    background: var(--background-color);
+    border-radius: 0px;
+}
+::-webkit-scrollbar-thumb:hover {
+    box-shadow: inset 0em 0em 0.3em 0em var(--secondaire-color);
+}
+::-webkit-scrollbar-track {
+    background: var(--tertiaire-color);
+    border-radius: 0px;
+    box-shadow: inset 0px 0px 0px 0px var(--tertiaire-color);
+}
 body {
     margin: 0;
 }
@@ -194,6 +210,9 @@ nav {
 .lien-rapide:hover {
     color: var(--quaternaire-color);
 }
+.rapide {
+    padding: 1vh 0.5vw;
+}
 main {
     background: var(--background-color);
 }
@@ -204,11 +223,14 @@ main {
     padding-bottom: 4em;
 }
 .titre-section {
-    animation: transition 300ms both;
+    animation: transition 200ms both;
     color: var(--tertiaire-color);
     margin: auto;
     font-size: 2em;
     padding: 8vh 0vw 3vh 2vw;
+}
+.section-grades {
+    animation: defilement 400ms both;
 }
 footer {
     background-color: var(--tertiaire-color);
