--- a/styles/style.css
+++ b/styles/style.css
@@ -26,6 +26,9 @@
     0% {
         opacity: 0;
     }
+    50% {
+        opacity: 0;
+    }
     100% {
         opacity: 1;
     }
@@ -50,17 +53,16 @@
 }
 @keyframes nav-box {
     0% {
-        width: auto;
+        width: 0;
         height: 0;
         opacity: 0;
     }
-    80% {
+    50% {
         width: auto;
-        height: fit-content;
+        height: auto;
         opacity: 0;
     }
     100% {
-        height: auto;
         opacity: 1;
     }
 }
@@ -75,20 +77,20 @@
     box-sizing: border-box;
 }
 ::-webkit-scrollbar {
-    width: 13px;
-    height: 13px;
+    width: 10px;
+    height: 10px;
 }
 ::-webkit-scrollbar-thumb {
-    background: var(--background-color);
-    border-radius: 0px;
+    background: var(--secondaire-color);
+    border-radius: 5px;
 }
 ::-webkit-scrollbar-thumb:hover {
-    box-shadow: inset 0em 0em 0.3em 0em var(--secondaire-color);
+    box-shadow: inset 0em 0em 0.3em 0em var(--tertiaire-color);
 }
 ::-webkit-scrollbar-track {
-    background: var(--tertiaire-color);
+    background: var(--background-color);
     border-radius: 0px;
-    box-shadow: inset 0px 0px 0px 0px var(--tertiaire-color);
+    box-shadow: inset 0px 0px 0px 0px var(--secondaire-color);
 }
 body {
     margin: 0;
@@ -186,7 +188,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 400ms linear;
+    animation: nav-box 400ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -246,9 +248,9 @@ main {
     margin: 2vh 1.5vw;
 }
 .article:hover {
+    animation: size 400ms both;
     box-shadow: inset 0em 0em 3em 0em var(--quaternaire-color);
     opacity: 0.9;
-    animation: size 300ms both;
 }
 .img-activite {
     width: 100%;
@@ -273,7 +275,7 @@ main {
     width: 1px;
 }
 .article:hover .description-activite {
-    animation: loader 400ms ease-in-out;
+    animation: loader 400ms linear;
     margin: auto;
     padding: 10px 0%;
     height: 190px;
@@ -307,6 +309,8 @@ strong {
 .detail-prix {
     margin: 0;
     font-size: 1em;
+    padding-top: 5px;
+    filter: opacity(0.6);
 }
 .article:hover .detail-prix {
     animation: loader 400ms ease-in-out;
