--- a/styles/grades.css
+++ b/styles/grades.css
@@ -231,6 +231,38 @@ main {
 }
 .section-grades {
     animation: defilement 400ms both;
+    display: flex;
+    justify-content: space-around;
+    align-items: flex-start;
+    flex-wrap: wrap;
+}
+.cadre-technique {
+    width: 20%;
+    min-width: 340px;
+    height: 370px;
+    background-color: var(--tertiaire-color);
+    padding: 2em 1.5em;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    border-radius: 70px 0px 70px 0px;
+    margin: 2em 1em;
+}
+.cadre-technique:hover {
+    animation: size 400ms ease-in-out;
+    box-shadow: inset 0em 0em 5em 0em var(--quaternaire-color);
+    opacity: 0.9;
+    border-radius: 70px 0px 70px 0px;
+    height: 590px;
+}
+.lien-page {
+    align-self: center;
+}
+.img-ceinture {
+    width: 200px;
+    object-fit: contain;
+    height: 200px;
+    border-radius: 100%;
 }
 footer {
     background-color: var(--tertiaire-color);
