création page grade

--- a/styles/grades.css
+++ b/styles/grades.css
@@ -255,7 +255,7 @@ main {
     border-radius: 70px 0px 70px 0px;
     height: 590px;
 }
-.lien-page {
+.cadre-img {
     align-self: center;
 }
 .img-ceinture {
