--- a/styles/grades.css
+++ b/styles/grades.css
@@ -26,6 +26,9 @@
     0% {
         opacity: 0;
     }
+    50% {
+        opacity: 0;
+    }
     100% {
         opacity: 1;
     }
@@ -42,24 +45,31 @@
 }
 @keyframes size {
     0% {
-        height: 490px;
+        height: 370px;
     }
     100% {
-        height: 670px;
+        height: 750px;
     }
 }
 @keyframes nav-box {
     0% {
-        width: 0;
-        height: 0;
+        width: 1px;
+        height: 1px;
         opacity: 0;
+    }
+    25% {
+        width: 150px;
     }
     50% {
         width: auto;
-        height: auto;
         opacity: 0;
     }
+    95% {
+        height: 130px;
+        opacity: 0.4;
+    }
     100% {
+        height: auto;
         opacity: 1;
     }
 }
@@ -185,7 +195,7 @@ nav {
     padding: 1vh 0;
 }
 .naviguation:hover .nav-rapide {
-    animation: nav-box 400ms ease-in-out;
+    animation: nav-box 600ms ease-in-out;
     height: auto;
     width: auto;
     position: initial;
@@ -237,9 +247,9 @@ main {
     flex-wrap: wrap;
 }
 .cadre-technique {
-    width: 20%;
-    min-width: 340px;
-    height: 370px;
+    width: 23%;
+    min-width: 350px;
+    height: 320px;
     background-color: var(--tertiaire-color);
     padding: 2em 1.5em;
     display: flex;
@@ -253,7 +263,7 @@ main {
     box-shadow: inset 0em 0em 5em 0em var(--quaternaire-color);
     opacity: 0.9;
     border-radius: 70px 0px 70px 0px;
-    height: 590px;
+    height: 750px;
 }
 .cadre-img {
     align-self: center;
@@ -261,8 +271,71 @@ main {
 .img-ceinture {
     width: 200px;
     object-fit: contain;
-    height: 200px;
-    border-radius: 100%;
+    height: 150px;
+}
+.cadre-technique:hover .img-ceinture {
+    animation: spinner 400ms ease-in-out;
+}
+.liste-techniques {
+    display: flex;
+    flex-direction: column;
+    align-items: stretch;
+}
+.titre-techniques {
+    font-size: 2em;
+    color: var(--primaire-color);
+    font-weight: bold;
+    text-align: center;
+    margin: 0;
+    padding: 2% 10% 5% 10%;
+}
+.details-techniques {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    height: 1px;
+    left: 0;
+    overflow: hidden;
+    position: absolute;
+    top: -10000px;
+    width: 1px;
+}
+.cadre-technique:hover .details-techniques {
+    animation: loader 400ms ease-in-out;
+    overflow: initial;
+    position: initial;
+    height: auto;
+    width: auto;
+}
+.liste-programme {
+    font-size: 1.2em;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+.titre-programme {
+    font-size: 1.3em;
+    color: var(--secondaire-color);
+    filter: opacity(0.8);
+    margin: 0;
+    padding: 2vh 3vw 0 3vw;
+    text-align: center;
+}
+.programme {
+    margin: 0;
+    padding: 2vh 2vw 0 2vw;
+    text-align: center;
+}
+.lien-page {
+    text-decoration: none;
+    color: var(--primaire-color);
+    filter: opacity(0.6);
+}
+.programme:hover {
+    transform: scale(1.3, 1.3);
+}
+.lien-page:hover {
+    filter: opacity(1);
 }
 footer {
     background-color: var(--tertiaire-color);
