--- a/styles/techniques.css
+++ b/styles/techniques.css
@@ -240,9 +240,6 @@ main {
     font-size: 2em;
     padding: 3vh 0vw 3vh 2vw;
 }
-.section-technique {
-    animation: defilement 400ms both;
-}
 .retour-gallerie {
     margin: 0vh 2vw 0vh 2vw;
     font-size: 4em;
@@ -254,6 +251,53 @@ main {
 .icone-retour:hover {
     animation: spinner 400ms linear;
     color: var(--primaire-color);
+}
+.article-technique {
+    animation: defilement 400ms both;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin: 0 1em;
+    border-radius: 70px 0px 70px 0px;
+    padding: 2em;
+    background-color: var(--tertiaire-color);
+}
+.nom-technique {
+    color: var(--primaire-color);
+    font-size: 2.5em;
+    border: 3px solid var(--primaire-color);
+    border-radius: 30px 0 30px 0;
+    padding: 0.5vh 0.5vw;
+    margin-bottom: 10vh;
+}
+.video-technique {
+    border-radius: 5px;
+}
+.photos-technique {
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+    width: 80%;
+    margin: 10vh 0;
+}
+.img-technique {
+    width: 20%;
+}
+.cadre-description {
+    width: 80%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+.titre-descriptif {
+    color: var(--primaire-color);
+    font-size: 2em;
+    text-decoration: underline;
+}
+.descriptif {
+    font-size: 1.3em;
+    text-align: justify;
+    filter: opacity(0.8);
 }
 footer {
     background-color: var(--tertiaire-color);
