--- a/styles/encyclopedie.css
+++ b/styles/encyclopedie.css
@@ -240,7 +240,49 @@ main {
     padding: 8vh 0vw 3vh 2vw;
 }
 .section-encyclo {
-    animation: defilement 400 both;
+    animation: defilement 400ms both;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-around;
+}
+.article-page {
+    margin: 2vh 2vw;
+    width: 36%;
+    min-width: 510px;
+    background-color: var(--tertiaire-color);
+    border-radius: 70px 0px 70px 0px;
+    height: 240px;
+}
+.article-page:hover {
+    animation: spinner-article 400ms ease-in-out;
+    box-shadow: inset 0em 0em 5em 0em var(--quaternaire-color);
+    opacity: 0.9;
+    border-radius: 70px 0px 70px 0px;
+}
+.lien-page {
+    margin: 2vh auto;
+    align-items: center;
+    padding: 0 1.5em;
+    display: flex;
+    justify-content: space-between;
+    text-decoration: none;
+}
+.titre-lien {
+    width: 40%;
+    text-align: center;
+    color: var(--primaire-color);
+    font-size: 1.4em;
+    word-wrap: break-word;
+}
+.bloc-img {
+    width: 40%;
+    margin: auto 0;
+}
+.image-article {
+    width: 100%;
+    height: 200px;
+    object-fit: cover;
+    border-radius: 70px 0 70px 0;
 }
 footer {
     background-color: var(--tertiaire-color);
