--- a/styles/resultats.css
+++ b/styles/resultats.css
@@ -243,11 +243,12 @@ main {
     animation: defilement 400ms both;
     display: flex;
     flex-wrap: wrap;
+    justify-content: space-around;
 }
 .article-resultat {
-    margin: 2vh auto;
-    width: 40%;
-    min-width: 535px;
+    margin: 2vh 2vw;
+    width: 36%;
+    min-width: 510px;
     background-color: var(--tertiaire-color);
     border-radius: 70px 0px 70px 0px;
     height: 240px;
@@ -271,6 +272,7 @@ main {
     text-align: center;
     color: var(--primaire-color);
     font-size: 1.3em;
+    word-wrap: break-word;
 }
 .bloc-contenu {
     width: 40%;
