--- a/styles/histoire-judo.css
+++ b/styles/histoire-judo.css
@@ -233,7 +233,7 @@ main {
     color: var(--tertiaire-color);
     margin: auto;
     font-size: 2em;
-    padding: 3vh 0vw 3vh 2vw;
+    padding: 5vh 0vw 0vh 2vw;
 }
 .retour-gallerie {
     margin: 0vh 2vw 0vh 2vw;
@@ -252,9 +252,9 @@ main {
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
-    margin: 0 1em;
+    margin: 5vh 1em;
     border-radius: 70px 0px 70px 0px;
-    padding: 2em;
+    padding: 3em 10em 0 10em;
     background-color: var(--tertiaire-color);
 }
 .titre-article {
@@ -270,9 +270,9 @@ main {
 .titre-histoire {
     color: var(--primaire-color);
     font-size: 2.5em;
-    border: 3px solid;
-    border-radius: 30px 0 30px 0;
-    padding: 0.5vh 1vw;
+    border: 5px solid var(--primaire-color);
+    border-radius: 50px 0 50px 0;
+    padding: 2vh 1vw;
 }
 .texte-histoire {
     text-align: justify;
@@ -294,13 +294,13 @@ main {
     margin: 5vh 0;
 }
 .image-paragraphe {
-    width: 30%;
+    width: 45%;
     object-fit: contain;
     margin: auto;
     border-radius: 30px;
 }
 .image-paragraphe-bis {
-    width: 45%;
+    width: 48%;
     object-fit: contain;
     margin: auto;
     border-radius: 30px;
