--- a/styles/histoire-judo.css
+++ b/styles/histoire-judo.css
@@ -254,7 +254,7 @@ main {
     flex-direction: column;
     margin: 5vh 1em;
     border-radius: 70px 0px 70px 0px;
-    padding: 3em 10em 0 10em;
+    padding: 3em 10em 3em 10em;
     background-color: var(--tertiaire-color);
 }
 .titre-article {
