--- a/styles/results.css
+++ b/styles/results.css
@@ -233,7 +233,7 @@ main {
     color: var(--tertiaire-color);
     margin: auto;
     font-size: 2em;
-    padding: 3vh 0vw 3vh 2vw;
+    padding: 5vh 0vw 0vh 2vw;
 }
 .retour-gallerie {
     margin: 0vh 2vw 0vh 2vw;
@@ -252,9 +252,9 @@ main {
     display: flex;
     flex-wrap: wrap;
     justify-content: space-evenly;
-    margin: 0 1em;
+    margin: 5vh 1em;
     border-radius: 70px 0px 70px 0px;
-    padding: 2em;
+    padding: 3em 10em 3em 10em;
     background-color: var(--tertiaire-color);
 }
 .tableau {
