--- a/styles/techniques.css
+++ b/styles/techniques.css
@@ -233,7 +233,7 @@ main {
     color: var(--tertiaire-color);
     margin: auto;
     font-size: 2em;
-    padding: 3vh 0vw 3vh 2vw;
+    padding: 5vh 0vw 0vh 2vw;
 }
 .retour-gallerie {
     margin: 0vh 2vw 0vh 2vw;
@@ -252,7 +252,7 @@ main {
     display: flex;
     flex-direction: column;
     align-items: center;
-    margin: 0 1em;
+    margin: 5vh 1em;
     border-radius: 70px 0px 70px 0px;
     padding: 2em;
     background-color: var(--tertiaire-color);
@@ -260,10 +260,10 @@ main {
 .nom-technique {
     color: var(--primaire-color);
     font-size: 2.5em;
-    border: 3px solid var(--primaire-color);
-    border-radius: 30px 0 30px 0;
-    padding: 0.5vh 0.5vw;
-    margin-bottom: 10vh;
+    border: 5px solid var(--primaire-color);
+    border-radius: 50px 0 50px 0;
+    padding: 2vh 1vw;
+    margin-bottom: 8vh;
 }
 .video-technique {
     border-radius: 5px;
@@ -293,6 +293,7 @@ main {
     color: var(--primaire-color);
     font-size: 2em;
     text-decoration: underline;
+    margin-top: 0;
 }
 .descriptif {
     font-size: 1.3em;
